--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -22,6 +22,7 @@ steps:
   - task: DotNetCoreCLI@2
     inputs:
       command: 'publish'
+      projects: 'HelloWorld/HelloWorld/HelloWorld.csproj'
       arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)'
     displayName: dotnet publish
 
