--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,30 +1,29 @@
 # Sample VSTS CI file
 
-queue: 'Helix'
-variables:
-  buildConfiguration: 'Release'
+phase:
+    queue: 'Helix'
+    variables:
+      buildConfiguration: 'Release'
 
-steps:
+    steps:
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'restore'
-      projects: '**/*.csproj'
-    displayName: dotnet restore
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'restore'
+          projects: '**/*.csproj'
+        displayName: dotnet restore
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'build'
-      projects: '**/*.csproj'
-      arguments: '--configuration $(buildConfiguration)'
-    displayName: dotnet build
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'build'
+          projects: '**/*.csproj'
+          arguments: '--configuration $(buildConfiguration)'
+        displayName: dotnet build
 
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'publish'
-      projects: 'HelloWorld/HelloWorld/HelloWorld.csproj'
-      arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)'
-    displayName: dotnet publish
-
-  - task: PublishBuildArtifacts@1
-    displayName: Publish artifacts
+      - task: DotNetCoreCLI@2
+        inputs:
+          command: 'publish'
+          projects: 'HelloWorld/HelloWorld/HelloWorld.csproj'
+          publishWebProjects: false
+          arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)'
+        displayName: dotnet publish
