--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -28,3 +28,31 @@ phases:
         publishWebProjects: false
         arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)'
       displayName: dotnet publish
+
+  - phase: Linux
+    queue:
+      name: DotNetCore-Linux
+    variables:
+      buildConfiguration: 'Release'
+
+    steps:
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'restore'
+        projects: '**/*.csproj'
+      displayName: dotnet restore
+
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'build'
+        projects: '**/*.csproj'
+        arguments: '--configuration $(buildConfiguration)'
+      displayName: dotnet build
+
+    - task: DotNetCoreCLI@2
+      inputs:
+        command: 'publish'
+        projects: 'HelloWorld/HelloWorld.csproj'
+        publishWebProjects: false
+        arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory)'
+      displayName: dotnet publish
