--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -9,56 +9,15 @@ phases:
       name: Helix
     variables:
       buildConfiguration: 'Release'
-
     steps:
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'restore'
-        projects: '**/*.csproj'
-      displayName: dotnet restore
-
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'build'
-        projects: '**/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-      displayName: dotnet build
-
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'publish'
-        projects: 'HelloWorld/HelloWorld.csproj'
-        publishWebProjects: false
-        arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory) --framework $(targetFramework)'
-      displayName: dotnet publish
+    - template: eng/build.yml
 
   - phase: Linux
     queue:
       name: DotNetCore-Linux
     variables:
       buildConfiguration: 'Release'
-
     steps:
     - task: DotNetCoreInstaller@0
       displayName: Use .NET Core sdk 1.0.4
-
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'restore'
-        projects: '**/*.csproj'
-      displayName: dotnet restore
-
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'build'
-        projects: '**/*.csproj'
-        arguments: '--configuration $(buildConfiguration)'
-      displayName: dotnet build
-
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: 'publish'
-        projects: 'HelloWorld/HelloWorld.csproj'
-        publishWebProjects: false
-        arguments: '--configuration $(buildConfiguration) --output $(build.artifactStagingDirectory) --framework $(targetFramework)'
-      displayName: dotnet publish
+    - template: eng/build.yml
