--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -9,22 +9,35 @@ phases:
       name: Helix
       parallel: 2 # Limit to four agents at a time
       matrix:
-        windows_debug:
+        debug:
           buildConfiguration: 'Debug'
-        windows_release:
+        release:
           buildConfiguration: 'Release'
     steps:
     - template: eng/build.yml
 
+  - phase: OSX
+    queue:
+      name: 'Hosted macOS Preview'
+      parallel: 2 # Limit to four agents at a time
+      matrix:
+        debug:
+          buildConfiguration: 'Debug'
+        release:
+          buildConfiguration: 'Release'
+    steps:
+    - task: DotNetCoreInstaller@0
+      displayName: Use .NET Core sdk 1.0.4
+    - template: eng/build.yml
   - phase: Linux
     queue:
       name: DotNetCore-Linux
       parallel: 2
       matrix:
-        linux_debug:
+        debug:
           buildConfiguration: 'Debug'
-        linux_release:
-          buildConfiguration: 'Debug'
+        release:
+          buildConfiguration: 'Release'
     steps:
     - task: DotNetCoreInstaller@0
       displayName: Use .NET Core sdk 1.0.4
