--- a/eng/build.yml
+++ b/eng/build.yml
@@ -1,4 +1,8 @@
 steps:
+- task: DotNetCoreInstaller@0
+  inputs:
+    version: 2.1.302
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
