--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -18,7 +18,7 @@ phases:
 
   - phase: OSX
     queue:
-      name: 'Hosted macOS Preview'
+      name: Hosted macOS Preview
       parallel: 2
       matrix:
         debug_conf:
