--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -38,7 +38,7 @@ phases:
         command: custom
         projects: HelloTests\helixpublish.proj
         custom: msbuild
-        arguments: '/t:test /p:HelixTargetQueues=Windows.10.Amd64.Open;Windows.7.Amd64.Open;windows.10.arm64.open;Windows.81.Amd64.Open'
+        arguments: '/t:test /p:HelixTargetQueues=Windows.10.Amd64.Open%3BWindows.7.Amd64.Open%3Bwindows.10.arm64.open%3BWindows.81.Amd64.Open'
       displayName: Send tests job to Helix
       env:
         HelixAccessToken: $(HelixTestAccessToken)
@@ -77,7 +77,7 @@ phases:
         command: custom
         projects: HelloTests/helixpublish.proj
         custom: msbuild
-        arguments: '/t:test /p:HelixTargetQueues=OSX.1013.amd64.Open;OSX.1012.amd64.Open'
+        arguments: '/t:test /p:HelixTargetQueues=OSX.1013.amd64.Open%3BOSX.1012.amd64.Open'
       displayName: Send tests job to Helix
       env:
         HelixAccessToken: $(HelixTestAccessToken)
@@ -119,7 +119,7 @@ phases:
         command: custom
         projects: HelloTests/helixpublish.proj
         custom: msbuild
-        arguments: '/t:test /p:HelixTargetQueues=ubuntu.1404.amd64.open;centos.74.amd64.open;RedHat.74.Amd64.Open;'
+        arguments: '/t:test /p:HelixTargetQueues=ubuntu.1404.amd64.open%3Bcentos.74.amd64.open%3BRedHat.74.Amd64.Open'
       displayName: Send tests job to Helix
       env:
         HelixAccessToken: $(HelixTestAccessToken)
