--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -82,7 +82,7 @@ phases:
       env:
         HelixAccessToken: $(HelixTestAccessToken)
       condition: eq(variables['_HelixBuildConfig'], 'Debug')
-    - script: powershell ./eng/helix-wait.sh
+    - script: chmod +x eng/helix-wait.sh; ./eng/helix-wait.sh
       displayName: Wait for test completion
       timeoutInMinutes: 60
       env:
@@ -124,7 +124,7 @@ phases:
       env:
         HelixAccessToken: $(HelixTestAccessToken)
       condition: eq(variables['_HelixBuildConfig'], 'Debug')
-    - script: powershell ./eng/helix-wait.sh
+    - script: chmod +x eng/helix-wait.sh; ./eng/helix-wait.sh
       displayName: Wait for test completion
       timeoutInMinutes: 60
       env:
