--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -1,6 +1,8 @@
 variables:
   Build.Repository.Clean: true
   targetFramework: netcoreapp2.0
+  _HelixType: build/product
+  _HelixSource: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
 
 trigger:
 - master
@@ -31,16 +33,15 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    - template: eng/common/templates/steps/helix-publish.yml
+    - template: /eng/common/templates/steps/helix-publish.yml
       parameters:
-        HelixSource: build/product
-        HelixType: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
         HelixTargetQueues: Windows.10.Amd64.Open;Windows.7.Amd64.Open
-        HelixAcessToken: $(HelixTestAccessToken)
-        WorkItemDirectory: HelloTests
+        HelixAccessToken: $(HelixTestAccessToken)
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
         WorkItemCommand: dotnet test
         EnableXUnitReporter: true
-      condition: eq(variables['_HelixBuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -64,16 +65,15 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    - template: eng/common/templates/steps/helix-publish.yml
+    - template: /eng/common/templates/steps/helix-publish.yml
       parameters:
-        HelixSource: build/product
-        HelixType: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
         HelixTargetQueues: OSX.1012.Amd64
-        HelixAcessToken: $(HelixTestAccessToken)
-        WorkItemDirectory: HelloTests
+        HelixAccessToken: $(HelixTestAccessToken)
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
         WorkItemCommand: dotnet test
         EnableXUnitReporter: true
-      condition: eq(variables['_HelixBuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -100,16 +100,15 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    - template: eng/common/templates/steps/helix-publish.yml
+    - template: /eng/common/templates/steps/helix-publish.yml
       parameters:
-        HelixSource: build/product
-        HelixType: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
         HelixTargetQueues: Ubuntu.1710.amd64.Open
-        HelixAcessToken: $(HelixTestAccessToken)
-        WorkItemDirectory: HelloTests
+        HelixAccessToken: $(HelixTestAccessToken)
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
         WorkItemCommand: dotnet test
         EnableXUnitReporter: true
-      condition: eq(variables['_HelixBuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
       # Run build in docker container
