--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -3,7 +3,6 @@ variables:
   targetFramework: netcoreapp2.0
   _HelixType: build/product
   _HelixSource: pr/dotnet/arcade-minimalci-sample/$(Build.SourceBranch)
-  _BuildConfig: ''
 
 trigger:
 - master
@@ -34,17 +33,17 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    ${{ if eq(variables['_BuildConfig'], 'Debug') }}:
-      - template: /eng/common/templates/steps/helix-publish.yml
-        parameters:
-          HelixSource: $(_HelixSource)
-          HelixType: $(_HelixType)
-          HelixTargetQueues: Windows.10.Amd64.Open;Windows.7.Amd64.Open
-          HelixAccessToken: $(HelixTestAccessToken)
-          CorrelationPayloadDirectory: .\.dotnet
-          WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
-          WorkItemCommand: "%HELIX_CORRELATION_PAYLOAD% dotnet test"
-          EnableXUnitReporter: true
+    - template: /eng/common/templates/steps/helix-publish.yml
+      condition: eq(variables['_BuildConfig'], 'Debug')
+      parameters:
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
+        HelixTargetQueues: Windows.10.Amd64.Open;Windows.7.Amd64.Open
+        HelixAccessToken: $(HelixTestAccessToken)
+        CorrelationPayloadDirectory: .\.dotnet
+        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
+        WorkItemCommand: "%HELIX_CORRELATION_PAYLOAD% dotnet test"
+        EnableXUnitReporter: true
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -68,17 +67,17 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    ${{ if eq(variables['_BuildConfig'], 'Debug') }}:
-      - template: /eng/common/templates/steps/helix-publish.yml
-        parameters:
-          HelixSource: $(_HelixSource)
-          HelixType: $(_HelixType)
-          HelixTargetQueues: OSX.1012.Amd64
-          HelixAccessToken: $(HelixTestAccessToken)
-          CorrelationPayloadDirectory: ./.dotnet
-          WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
-          WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
-          EnableXUnitReporter: true
+    - template: /eng/common/templates/steps/helix-publish.yml
+      condition: eq(variables['_BuildConfig'], 'Debug')
+      parameters:
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
+        HelixTargetQueues: OSX.1012.Amd64
+        HelixAccessToken: $(HelixTestAccessToken)
+        CorrelationPayloadDirectory: ./.dotnet
+        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
+        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
+        EnableXUnitReporter: true
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -105,17 +104,17 @@ phases:
       name: Build
       displayName: Build
       condition: succeeded()
-    ${{ if eq(variables['_BuildConfig'], 'Debug') }}:
-      - template: /eng/common/templates/steps/helix-publish.yml
-        parameters:
-          HelixSource: $(_HelixSource)
-          HelixType: $(_HelixType)
-          HelixTargetQueues: Debian.9.Amd64.Open;Fedora.27.Amd64.Open;RedHat.74.Amd64.Open;Ubuntu.1604.Amd64.Open
-          HelixAccessToken: $(HelixTestAccessToken)
-          CorrelationPayloadDirectory: ./.dotnet
-          WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
-          WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
-          EnableXUnitReporter: true
+    - template: /eng/common/templates/steps/helix-publish.yml
+      condition: eq(variables['_BuildConfig'], 'Debug')
+      parameters:
+        HelixSource: $(_HelixSource)
+        HelixType: $(_HelixType)
+        HelixTargetQueues: Debian.9.Amd64.Open;Fedora.27.Amd64.Open;RedHat.74.Amd64.Open;Ubuntu.1604.Amd64.Open
+        HelixAccessToken: $(HelixTestAccessToken)
+        CorrelationPayloadDirectory: ./.dotnet
+        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
+        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
+        EnableXUnitReporter: true
     variables:
       _HelixBuildConfig: $(_BuildConfig)
       # Run build in docker container
