--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -34,7 +34,6 @@ phases:
       displayName: Build
       condition: succeeded()
     - template: /eng/common/templates/steps/helix-publish.yml
-      condition: eq(variables['_BuildConfig'], 'Debug')
       parameters:
         HelixSource: $(_HelixSource)
         HelixType: $(_HelixType)
@@ -44,6 +43,7 @@ phases:
         WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
         WorkItemCommand: "%HELIX_CORRELATION_PAYLOAD% dotnet test"
         EnableXUnitReporter: true
+        Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -68,7 +68,6 @@ phases:
       displayName: Build
       condition: succeeded()
     - template: /eng/common/templates/steps/helix-publish.yml
-      condition: eq(variables['_BuildConfig'], 'Debug')
       parameters:
         HelixSource: $(_HelixSource)
         HelixType: $(_HelixType)
@@ -78,6 +77,7 @@ phases:
         WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
         WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
         EnableXUnitReporter: true
+        Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
 
@@ -105,7 +105,6 @@ phases:
       displayName: Build
       condition: succeeded()
     - template: /eng/common/templates/steps/helix-publish.yml
-      condition: eq(variables['_BuildConfig'], 'Debug')
       parameters:
         HelixSource: $(_HelixSource)
         HelixType: $(_HelixType)
@@ -115,6 +114,7 @@ phases:
         WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/Debug/netcoreapp2.0
         WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
         EnableXUnitReporter: true
+        Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
       _HelixBuildConfig: $(_BuildConfig)
       # Run build in docker container
