Try dotnet xunit

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -40,8 +40,8 @@ phases:
         HelixTargetQueues: Windows.10.Amd64.Open;Windows.7.Amd64.Open
         HelixAccessToken: $(HelixTestAccessToken)
         CorrelationPayloadDirectory: .\.dotnet
-        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/HelloTests/Debug/netcoreapp2.0
-        WorkItemCommand: "%HELIX_CORRELATION_PAYLOAD% dotnet test"
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
+        WorkItemCommand: "%HELIX_CORRELATION_PAYLOAD% dotnet xunit"
         EnableXUnitReporter: true
         Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
@@ -74,8 +74,8 @@ phases:
         HelixTargetQueues: OSX.1012.Amd64
         HelixAccessToken: $(HelixTestAccessToken)
         CorrelationPayloadDirectory: ./.dotnet
-        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/HelloTests/Debug/netcoreapp2.0
-        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
+        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet xunit
         EnableXUnitReporter: true
         Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
@@ -111,8 +111,8 @@ phases:
         HelixTargetQueues: Debian.9.Amd64.Open;Fedora.27.Amd64.Open;RedHat.74.Amd64.Open;Ubuntu.1604.Amd64.Open
         HelixAccessToken: $(HelixTestAccessToken)
         CorrelationPayloadDirectory: ./.dotnet
-        WorkItemDirectory: $(Build.SourcesDirectory)/artifacts/bin/HelloTests/Debug/netcoreapp2.0
-        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet test
+        WorkItemDirectory: $(Build.SourcesDirectory)/HelloTests
+        WorkItemCommand: $HELIX_CORRELATION_PAYLOAD dotnet xunit
         EnableXUnitReporter: true
         Condition: eq(variables['_BuildConfig'], 'Debug')
     variables:
